core/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMA
    DQUOTE
    FALSE
    NULL
    SQUOTE
    TRUE

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> IF expression statement END
Rule 5     statement -> FOR ID EQUALS expression DOSPUNTOS expression statement_list END
Rule 6     statement -> WHILE expression statement_list END
Rule 7     statement -> DISP LPAREN expression RPAREN SEMICOLON
Rule 8     statement -> DISP LPAREN expression RPAREN
Rule 9     statement -> ID EQUALS expression SEMICOLON
Rule 10    statement -> ID EQUALS expression
Rule 11    statement -> expression SEMICOLON
Rule 12    statement -> expression
Rule 13    expression -> expression PLUS expression
Rule 14    expression -> expression MINUS expression
Rule 15    expression -> expression TIMES expression
Rule 16    expression -> expression DIVIDE expression
Rule 17    expression -> expression GREATER expression
Rule 18    expression -> expression LESS expression
Rule 19    expression -> expression DOUBLE_EQUALS expression
Rule 20    expression -> expression GREATER_EQUALS expression
Rule 21    expression -> expression LESS_EQUALS expression
Rule 22    expression -> expression AND expression
Rule 23    expression -> expression OR expression
Rule 24    expression -> expression DOSPUNTOS expression
Rule 25    expression -> CADENA
Rule 26    expression -> NOT expression
Rule 27    expression -> LPAREN expression RPAREN
Rule 28    expression -> NUMBER
Rule 29    expression -> ID

Terminals, with rules where they appear

AND                  : 22
CADENA               : 25
COMMA                : 
DISP                 : 7 8
DIVIDE               : 16
DOSPUNTOS            : 5 24
DOUBLE_EQUALS        : 19
DQUOTE               : 
END                  : 4 5 6
EQUALS               : 5 9 10
FALSE                : 
FOR                  : 5
GREATER              : 17
GREATER_EQUALS       : 20
ID                   : 5 9 10 29
IF                   : 4
LESS                 : 18
LESS_EQUALS          : 21
LPAREN               : 7 8 27
MINUS                : 14
NOT                  : 26
NULL                 : 
NUMBER               : 28
OR                   : 23
PLUS                 : 13
RPAREN               : 7 8 27
SEMICOLON            : 7 9 11
SQUOTE               : 
TIMES                : 15
TRUE                 : 
WHILE                : 6
error                : 

Nonterminals, with rules where they appear

expression           : 4 5 5 6 7 8 9 10 11 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 26 27
program              : 0
statement            : 2 3 4
statement_list       : 1 2 5 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . IF expression statement END
    (5) statement -> . FOR ID EQUALS expression DOSPUNTOS expression statement_list END
    (6) statement -> . WHILE expression statement_list END
    (7) statement -> . DISP LPAREN expression RPAREN SEMICOLON
    (8) statement -> . DISP LPAREN expression RPAREN
    (9) statement -> . ID EQUALS expression SEMICOLON
    (10) statement -> . ID EQUALS expression
    (11) statement -> . expression SEMICOLON
    (12) statement -> . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression DOUBLE_EQUALS expression
    (20) expression -> . expression GREATER_EQUALS expression
    (21) expression -> . expression LESS_EQUALS expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression DOSPUNTOS expression
    (25) expression -> . CADENA
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . ID

    IF              shift and go to state 4
    FOR             shift and go to state 6
    WHILE           shift and go to state 8
    DISP            shift and go to state 9
    ID              shift and go to state 7
    CADENA          shift and go to state 11
    NOT             shift and go to state 12
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 13

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . IF expression statement END
    (5) statement -> . FOR ID EQUALS expression DOSPUNTOS expression statement_list END
    (6) statement -> . WHILE expression statement_list END
    (7) statement -> . DISP LPAREN expression RPAREN SEMICOLON
    (8) statement -> . DISP LPAREN expression RPAREN
    (9) statement -> . ID EQUALS expression SEMICOLON
    (10) statement -> . ID EQUALS expression
    (11) statement -> . expression SEMICOLON
    (12) statement -> . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression DOUBLE_EQUALS expression
    (20) expression -> . expression GREATER_EQUALS expression
    (21) expression -> . expression LESS_EQUALS expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression DOSPUNTOS expression
    (25) expression -> . CADENA
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . ID

    $end            reduce using rule 1 (program -> statement_list .)
    IF              shift and go to state 4
    FOR             shift and go to state 6
    WHILE           shift and go to state 8
    DISP            shift and go to state 9
    ID              shift and go to state 7
    CADENA          shift and go to state 11
    NOT             shift and go to state 12
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 13

    statement                      shift and go to state 14
    expression                     shift and go to state 5

state 3

    (3) statement_list -> statement .

    IF              reduce using rule 3 (statement_list -> statement .)
    FOR             reduce using rule 3 (statement_list -> statement .)
    WHILE           reduce using rule 3 (statement_list -> statement .)
    DISP            reduce using rule 3 (statement_list -> statement .)
    ID              reduce using rule 3 (statement_list -> statement .)
    CADENA          reduce using rule 3 (statement_list -> statement .)
    NOT             reduce using rule 3 (statement_list -> statement .)
    LPAREN          reduce using rule 3 (statement_list -> statement .)
    NUMBER          reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    END             reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> IF . expression statement END
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression DOUBLE_EQUALS expression
    (20) expression -> . expression GREATER_EQUALS expression
    (21) expression -> . expression LESS_EQUALS expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression DOSPUNTOS expression
    (25) expression -> . CADENA
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . ID

    CADENA          shift and go to state 11
    NOT             shift and go to state 12
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 13
    ID              shift and go to state 16

    expression                     shift and go to state 15

state 5

    (11) statement -> expression . SEMICOLON
    (12) statement -> expression .
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . DIVIDE expression
    (17) expression -> expression . GREATER expression
    (18) expression -> expression . LESS expression
    (19) expression -> expression . DOUBLE_EQUALS expression
    (20) expression -> expression . GREATER_EQUALS expression
    (21) expression -> expression . LESS_EQUALS expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . DOSPUNTOS expression

    SEMICOLON       shift and go to state 17
    IF              reduce using rule 12 (statement -> expression .)
    FOR             reduce using rule 12 (statement -> expression .)
    WHILE           reduce using rule 12 (statement -> expression .)
    DISP            reduce using rule 12 (statement -> expression .)
    ID              reduce using rule 12 (statement -> expression .)
    CADENA          reduce using rule 12 (statement -> expression .)
    NOT             reduce using rule 12 (statement -> expression .)
    LPAREN          reduce using rule 12 (statement -> expression .)
    NUMBER          reduce using rule 12 (statement -> expression .)
    $end            reduce using rule 12 (statement -> expression .)
    END             reduce using rule 12 (statement -> expression .)
    PLUS            shift and go to state 18
    MINUS           shift and go to state 19
    TIMES           shift and go to state 20
    DIVIDE          shift and go to state 21
    GREATER         shift and go to state 22
    LESS            shift and go to state 23
    DOUBLE_EQUALS   shift and go to state 24
    GREATER_EQUALS  shift and go to state 25
    LESS_EQUALS     shift and go to state 26
    AND             shift and go to state 27
    OR              shift and go to state 28
    DOSPUNTOS       shift and go to state 29


state 6

    (5) statement -> FOR . ID EQUALS expression DOSPUNTOS expression statement_list END

    ID              shift and go to state 30


state 7

    (9) statement -> ID . EQUALS expression SEMICOLON
    (10) statement -> ID . EQUALS expression
    (29) expression -> ID .

    EQUALS          shift and go to state 31
    SEMICOLON       reduce using rule 29 (expression -> ID .)
    PLUS            reduce using rule 29 (expression -> ID .)
    MINUS           reduce using rule 29 (expression -> ID .)
    TIMES           reduce using rule 29 (expression -> ID .)
    DIVIDE          reduce using rule 29 (expression -> ID .)
    GREATER         reduce using rule 29 (expression -> ID .)
    LESS            reduce using rule 29 (expression -> ID .)
    DOUBLE_EQUALS   reduce using rule 29 (expression -> ID .)
    GREATER_EQUALS  reduce using rule 29 (expression -> ID .)
    LESS_EQUALS     reduce using rule 29 (expression -> ID .)
    AND             reduce using rule 29 (expression -> ID .)
    OR              reduce using rule 29 (expression -> ID .)
    DOSPUNTOS       reduce using rule 29 (expression -> ID .)
    IF              reduce using rule 29 (expression -> ID .)
    FOR             reduce using rule 29 (expression -> ID .)
    WHILE           reduce using rule 29 (expression -> ID .)
    DISP            reduce using rule 29 (expression -> ID .)
    ID              reduce using rule 29 (expression -> ID .)
    CADENA          reduce using rule 29 (expression -> ID .)
    NOT             reduce using rule 29 (expression -> ID .)
    LPAREN          reduce using rule 29 (expression -> ID .)
    NUMBER          reduce using rule 29 (expression -> ID .)
    $end            reduce using rule 29 (expression -> ID .)
    END             reduce using rule 29 (expression -> ID .)


state 8

    (6) statement -> WHILE . expression statement_list END
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression DOUBLE_EQUALS expression
    (20) expression -> . expression GREATER_EQUALS expression
    (21) expression -> . expression LESS_EQUALS expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression DOSPUNTOS expression
    (25) expression -> . CADENA
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . ID

    CADENA          shift and go to state 11
    NOT             shift and go to state 12
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 13
    ID              shift and go to state 16

    expression                     shift and go to state 32

state 9

    (7) statement -> DISP . LPAREN expression RPAREN SEMICOLON
    (8) statement -> DISP . LPAREN expression RPAREN

    LPAREN          shift and go to state 33


state 10

    (27) expression -> LPAREN . expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression DOUBLE_EQUALS expression
    (20) expression -> . expression GREATER_EQUALS expression
    (21) expression -> . expression LESS_EQUALS expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression DOSPUNTOS expression
    (25) expression -> . CADENA
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . ID

    CADENA          shift and go to state 11
    NOT             shift and go to state 12
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 13
    ID              shift and go to state 16

    expression                     shift and go to state 34

state 11

    (25) expression -> CADENA .

    SEMICOLON       reduce using rule 25 (expression -> CADENA .)
    PLUS            reduce using rule 25 (expression -> CADENA .)
    MINUS           reduce using rule 25 (expression -> CADENA .)
    TIMES           reduce using rule 25 (expression -> CADENA .)
    DIVIDE          reduce using rule 25 (expression -> CADENA .)
    GREATER         reduce using rule 25 (expression -> CADENA .)
    LESS            reduce using rule 25 (expression -> CADENA .)
    DOUBLE_EQUALS   reduce using rule 25 (expression -> CADENA .)
    GREATER_EQUALS  reduce using rule 25 (expression -> CADENA .)
    LESS_EQUALS     reduce using rule 25 (expression -> CADENA .)
    AND             reduce using rule 25 (expression -> CADENA .)
    OR              reduce using rule 25 (expression -> CADENA .)
    DOSPUNTOS       reduce using rule 25 (expression -> CADENA .)
    IF              reduce using rule 25 (expression -> CADENA .)
    FOR             reduce using rule 25 (expression -> CADENA .)
    WHILE           reduce using rule 25 (expression -> CADENA .)
    DISP            reduce using rule 25 (expression -> CADENA .)
    ID              reduce using rule 25 (expression -> CADENA .)
    CADENA          reduce using rule 25 (expression -> CADENA .)
    NOT             reduce using rule 25 (expression -> CADENA .)
    LPAREN          reduce using rule 25 (expression -> CADENA .)
    NUMBER          reduce using rule 25 (expression -> CADENA .)
    $end            reduce using rule 25 (expression -> CADENA .)
    RPAREN          reduce using rule 25 (expression -> CADENA .)
    END             reduce using rule 25 (expression -> CADENA .)


state 12

    (26) expression -> NOT . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression DOUBLE_EQUALS expression
    (20) expression -> . expression GREATER_EQUALS expression
    (21) expression -> . expression LESS_EQUALS expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression DOSPUNTOS expression
    (25) expression -> . CADENA
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . ID

    CADENA          shift and go to state 11
    NOT             shift and go to state 12
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 13
    ID              shift and go to state 16

    expression                     shift and go to state 35

state 13

    (28) expression -> NUMBER .

    SEMICOLON       reduce using rule 28 (expression -> NUMBER .)
    PLUS            reduce using rule 28 (expression -> NUMBER .)
    MINUS           reduce using rule 28 (expression -> NUMBER .)
    TIMES           reduce using rule 28 (expression -> NUMBER .)
    DIVIDE          reduce using rule 28 (expression -> NUMBER .)
    GREATER         reduce using rule 28 (expression -> NUMBER .)
    LESS            reduce using rule 28 (expression -> NUMBER .)
    DOUBLE_EQUALS   reduce using rule 28 (expression -> NUMBER .)
    GREATER_EQUALS  reduce using rule 28 (expression -> NUMBER .)
    LESS_EQUALS     reduce using rule 28 (expression -> NUMBER .)
    AND             reduce using rule 28 (expression -> NUMBER .)
    OR              reduce using rule 28 (expression -> NUMBER .)
    DOSPUNTOS       reduce using rule 28 (expression -> NUMBER .)
    IF              reduce using rule 28 (expression -> NUMBER .)
    FOR             reduce using rule 28 (expression -> NUMBER .)
    WHILE           reduce using rule 28 (expression -> NUMBER .)
    DISP            reduce using rule 28 (expression -> NUMBER .)
    ID              reduce using rule 28 (expression -> NUMBER .)
    CADENA          reduce using rule 28 (expression -> NUMBER .)
    NOT             reduce using rule 28 (expression -> NUMBER .)
    LPAREN          reduce using rule 28 (expression -> NUMBER .)
    NUMBER          reduce using rule 28 (expression -> NUMBER .)
    $end            reduce using rule 28 (expression -> NUMBER .)
    RPAREN          reduce using rule 28 (expression -> NUMBER .)
    END             reduce using rule 28 (expression -> NUMBER .)


state 14

    (2) statement_list -> statement_list statement .

    IF              reduce using rule 2 (statement_list -> statement_list statement .)
    FOR             reduce using rule 2 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 2 (statement_list -> statement_list statement .)
    DISP            reduce using rule 2 (statement_list -> statement_list statement .)
    ID              reduce using rule 2 (statement_list -> statement_list statement .)
    CADENA          reduce using rule 2 (statement_list -> statement_list statement .)
    NOT             reduce using rule 2 (statement_list -> statement_list statement .)
    LPAREN          reduce using rule 2 (statement_list -> statement_list statement .)
    NUMBER          reduce using rule 2 (statement_list -> statement_list statement .)
    $end            reduce using rule 2 (statement_list -> statement_list statement .)
    END             reduce using rule 2 (statement_list -> statement_list statement .)


state 15

    (4) statement -> IF expression . statement END
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . DIVIDE expression
    (17) expression -> expression . GREATER expression
    (18) expression -> expression . LESS expression
    (19) expression -> expression . DOUBLE_EQUALS expression
    (20) expression -> expression . GREATER_EQUALS expression
    (21) expression -> expression . LESS_EQUALS expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . DOSPUNTOS expression
    (4) statement -> . IF expression statement END
    (5) statement -> . FOR ID EQUALS expression DOSPUNTOS expression statement_list END
    (6) statement -> . WHILE expression statement_list END
    (7) statement -> . DISP LPAREN expression RPAREN SEMICOLON
    (8) statement -> . DISP LPAREN expression RPAREN
    (9) statement -> . ID EQUALS expression SEMICOLON
    (10) statement -> . ID EQUALS expression
    (11) statement -> . expression SEMICOLON
    (12) statement -> . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression DOUBLE_EQUALS expression
    (20) expression -> . expression GREATER_EQUALS expression
    (21) expression -> . expression LESS_EQUALS expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression DOSPUNTOS expression
    (25) expression -> . CADENA
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . ID

    PLUS            shift and go to state 18
    MINUS           shift and go to state 19
    TIMES           shift and go to state 20
    DIVIDE          shift and go to state 21
    GREATER         shift and go to state 22
    LESS            shift and go to state 23
    DOUBLE_EQUALS   shift and go to state 24
    GREATER_EQUALS  shift and go to state 25
    LESS_EQUALS     shift and go to state 26
    AND             shift and go to state 27
    OR              shift and go to state 28
    DOSPUNTOS       shift and go to state 29
    IF              shift and go to state 4
    FOR             shift and go to state 6
    WHILE           shift and go to state 8
    DISP            shift and go to state 9
    ID              shift and go to state 7
    CADENA          shift and go to state 11
    NOT             shift and go to state 12
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 13

    expression                     shift and go to state 5
    statement                      shift and go to state 36

state 16

    (29) expression -> ID .

    PLUS            reduce using rule 29 (expression -> ID .)
    MINUS           reduce using rule 29 (expression -> ID .)
    TIMES           reduce using rule 29 (expression -> ID .)
    DIVIDE          reduce using rule 29 (expression -> ID .)
    GREATER         reduce using rule 29 (expression -> ID .)
    LESS            reduce using rule 29 (expression -> ID .)
    DOUBLE_EQUALS   reduce using rule 29 (expression -> ID .)
    GREATER_EQUALS  reduce using rule 29 (expression -> ID .)
    LESS_EQUALS     reduce using rule 29 (expression -> ID .)
    AND             reduce using rule 29 (expression -> ID .)
    OR              reduce using rule 29 (expression -> ID .)
    DOSPUNTOS       reduce using rule 29 (expression -> ID .)
    IF              reduce using rule 29 (expression -> ID .)
    FOR             reduce using rule 29 (expression -> ID .)
    WHILE           reduce using rule 29 (expression -> ID .)
    DISP            reduce using rule 29 (expression -> ID .)
    ID              reduce using rule 29 (expression -> ID .)
    CADENA          reduce using rule 29 (expression -> ID .)
    NOT             reduce using rule 29 (expression -> ID .)
    LPAREN          reduce using rule 29 (expression -> ID .)
    NUMBER          reduce using rule 29 (expression -> ID .)
    RPAREN          reduce using rule 29 (expression -> ID .)
    SEMICOLON       reduce using rule 29 (expression -> ID .)
    $end            reduce using rule 29 (expression -> ID .)
    END             reduce using rule 29 (expression -> ID .)


state 17

    (11) statement -> expression SEMICOLON .

    IF              reduce using rule 11 (statement -> expression SEMICOLON .)
    FOR             reduce using rule 11 (statement -> expression SEMICOLON .)
    WHILE           reduce using rule 11 (statement -> expression SEMICOLON .)
    DISP            reduce using rule 11 (statement -> expression SEMICOLON .)
    ID              reduce using rule 11 (statement -> expression SEMICOLON .)
    CADENA          reduce using rule 11 (statement -> expression SEMICOLON .)
    NOT             reduce using rule 11 (statement -> expression SEMICOLON .)
    LPAREN          reduce using rule 11 (statement -> expression SEMICOLON .)
    NUMBER          reduce using rule 11 (statement -> expression SEMICOLON .)
    $end            reduce using rule 11 (statement -> expression SEMICOLON .)
    END             reduce using rule 11 (statement -> expression SEMICOLON .)


state 18

    (13) expression -> expression PLUS . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression DOUBLE_EQUALS expression
    (20) expression -> . expression GREATER_EQUALS expression
    (21) expression -> . expression LESS_EQUALS expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression DOSPUNTOS expression
    (25) expression -> . CADENA
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . ID

    CADENA          shift and go to state 11
    NOT             shift and go to state 12
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 13
    ID              shift and go to state 16

    expression                     shift and go to state 37

state 19

    (14) expression -> expression MINUS . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression DOUBLE_EQUALS expression
    (20) expression -> . expression GREATER_EQUALS expression
    (21) expression -> . expression LESS_EQUALS expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression DOSPUNTOS expression
    (25) expression -> . CADENA
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . ID

    CADENA          shift and go to state 11
    NOT             shift and go to state 12
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 13
    ID              shift and go to state 16

    expression                     shift and go to state 38

state 20

    (15) expression -> expression TIMES . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression DOUBLE_EQUALS expression
    (20) expression -> . expression GREATER_EQUALS expression
    (21) expression -> . expression LESS_EQUALS expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression DOSPUNTOS expression
    (25) expression -> . CADENA
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . ID

    CADENA          shift and go to state 11
    NOT             shift and go to state 12
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 13
    ID              shift and go to state 16

    expression                     shift and go to state 39

state 21

    (16) expression -> expression DIVIDE . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression DOUBLE_EQUALS expression
    (20) expression -> . expression GREATER_EQUALS expression
    (21) expression -> . expression LESS_EQUALS expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression DOSPUNTOS expression
    (25) expression -> . CADENA
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . ID

    CADENA          shift and go to state 11
    NOT             shift and go to state 12
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 13
    ID              shift and go to state 16

    expression                     shift and go to state 40

state 22

    (17) expression -> expression GREATER . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression DOUBLE_EQUALS expression
    (20) expression -> . expression GREATER_EQUALS expression
    (21) expression -> . expression LESS_EQUALS expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression DOSPUNTOS expression
    (25) expression -> . CADENA
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . ID

    CADENA          shift and go to state 11
    NOT             shift and go to state 12
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 13
    ID              shift and go to state 16

    expression                     shift and go to state 41

state 23

    (18) expression -> expression LESS . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression DOUBLE_EQUALS expression
    (20) expression -> . expression GREATER_EQUALS expression
    (21) expression -> . expression LESS_EQUALS expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression DOSPUNTOS expression
    (25) expression -> . CADENA
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . ID

    CADENA          shift and go to state 11
    NOT             shift and go to state 12
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 13
    ID              shift and go to state 16

    expression                     shift and go to state 42

state 24

    (19) expression -> expression DOUBLE_EQUALS . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression DOUBLE_EQUALS expression
    (20) expression -> . expression GREATER_EQUALS expression
    (21) expression -> . expression LESS_EQUALS expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression DOSPUNTOS expression
    (25) expression -> . CADENA
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . ID

    CADENA          shift and go to state 11
    NOT             shift and go to state 12
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 13
    ID              shift and go to state 16

    expression                     shift and go to state 43

state 25

    (20) expression -> expression GREATER_EQUALS . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GREATER expression
    (18) expression -> . expression LESS expression
    (19) expression -> . expression DOUBLE_EQUALS expression
    (20) expression -> . expression GREATER_EQUALS expression
    (21) expression -> . expression LESS_EQUALS expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression DOSPUNTOS expression
    (25) expression -> . CADENA
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . NUMBER
    (29) expression -> . ID
